# pg_health

./: .gitignore  README.md  pyproject.toml
src/pg_health/: __init__.py  cli.py  collector.py  diff.py  models.py  output.py
tests/: test_diff.py  test_models.py
